--- a/help-desk-server/src/main/resources/application.properties
+++ b/help-desk-server/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
+
+active.directory.domain=tegas.local
+active.directory.ldap=ldap://192.168.1.8/
