--- a/help-desk-server/src/main/resources/application.properties
+++ b/help-desk-server/src/main/resources/application.properties
@@ -8,5 +8,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 active.directory.domain=tegas.local
 active.directory.ldap=ldap://192.168.1.8/
