--- a/help-desk-server/src/main/resources/application.properties
+++ b/help-desk-server/src/main/resources/application.properties
@@ -21,5 +21,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-#active.directory.domain=tegas.local
-#active.directory.ldap=ldap://192.168.1.8/
+active.directory.domain=tegas.local
+active.directory.ldap=ldap://192.168.1.8/
