--- a/help-desk-server/src/main/resources/application.properties
+++ b/help-desk-server/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 spring.application.name=help-desk-server
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.defer-datasource-initialization=true
-spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.defer-datasource-initialization=true
+#spring.h2.console.enabled=true
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/helpdesk_db
-#spring.datasource.username=vladdrd
-#spring.datasource.password=123456
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/helpdesk_db
+spring.datasource.username=vladdrd
+spring.datasource.password=123456
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -21,5 +21,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-active.directory.domain=tegas.local
-active.directory.ldap=ldap://192.168.1.8/
+#active.directory.domain=tegas.local
+#active.directory.ldap=ldap://192.168.1.8/
