--- a/help-desk-server/src/main/resources/application.properties
+++ b/help-desk-server/src/main/resources/application.properties
@@ -9,17 +9,14 @@ spring.application.name=help-desk-server
 #spring.h2.console.enabled=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/helpdesk_db
-spring.datasource.username=vladdrd
+spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-#active.directory.domain=tegas.local
-#active.directory.ldap=ldap://192.168.1.8/
+active.directory.domain=tegas.local
+active.directory.ldap=ldap://192.168.1.8/
