--- a/help-desk-server/src/main/resources/application.properties
+++ b/help-desk-server/src/main/resources/application.properties
@@ -18,5 +18,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+server.address=0.0.0.0
+server.port=8080
+
 active.directory.domain=tegas.local
 active.directory.ldap=ldap://192.168.1.8/
