--- a/help-desk-server/src/main/resources/application.properties
+++ b/help-desk-server/src/main/resources/application.properties
@@ -18,8 +18,26 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+server.tomcat.threads.min-spare=10
+server.tomcat.threads.max=100
+server.tomcat.max-connections=1000
+
+spring.task.execution.pool.core-size=10
+spring.task.execution.pool.max-size=50
+
+spring.task.execution.pool.queue-capacity=100
+spring.task.execution.pool.keep-alive=60s
+
+
 server.address=0.0.0.0
 server.port=8080
 
 active.directory.domain=tegas.local
 active.directory.ldap=ldap://192.168.1.8/
+
+
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
