--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.0",
+    "react-toastify": "^10.0.5",
     "rollup": "^4.18.1"
   },
   "devDependencies": {
