--- a/help-desk-server/src/main/resources/application.properties
+++ b/help-desk-server/src/main/resources/application.properties
@@ -7,13 +7,22 @@ spring.application.name=help-desk-server
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.defer-datasource-initialization=true
 #spring.h2.console.enabled=true
+#
+#spring.datasource.url=jdbc:postgresql://localhost:5432/helpdesk_db
+#spring.datasource.username=postgres
+#spring.datasource.password=123456
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/helpdesk_db
-spring.datasource.username=postgres
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/helpdesk_db
+spring.datasource.username=admin
 spring.datasource.password=123456
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
